--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.1.4",
+    "@next/third-parties": "^14.1.4",
+    "next": "^14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-typed": "^2.0.12"
+    "react-typed": "^2.0.12",
+    "schema-dts": "^1.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
